# understand-first

./: .dockerignore  .gitignore  .gitlab-ci.yml  .understand-first.yml  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  bitbucket-pipelines.yml  docker-compose.yml  install.bat  install.sh  justfile  pyproject.toml  requirements.txt  u.cmd  u.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: understand-first.md
.github/workflows/: accessibility-testing.yml  ci-tests.yml  ci.yml  codeql.yml  pack-publish.yml  pr-delta-comment.yml  publish-pypi.yml  release.yml  scorecards.yml  secure.yml  tour-must-pass.yml  understand-first-commenter.yml  understand-first-pr-analysis.yml  understand-first.yml
cli/: README.md  pyproject.toml
cli/ucli/: config.py  main.py
cli/ucli/analyzers/: python_analyzer.py
cli/ucli/boundaries/: scan.py
cli/ucli/contracts/: contracts.py  lang_strategies.py
cli/ucli/dashboard/: build.py
cli/ucli/glossary/: build.py
cli/ucli/graph/: graph.py
cli/ucli/lens/: ingest.py  lens.py
cli/ucli/metrics/: analytics.py  ttu.py
cli/ucli/pack/: publish.py
cli/ucli/packs/: pack.py
cli/ucli/report/: report.py
cli/ucli/trace/: pytrace.py
cli/ucli/visual/: delta.py
commenter/: Dockerfile  README.md  k8s-deployment.yaml  requirements.txt  understand_first_commenter.py  webhook_handler.py
contracts/: README.md  contracts.yaml  contracts_from_proto.yaml  example_contracts.yaml
contracts/lean/: invariants_PROTO_examples_apis_orders_proto.lean  invariants_ROUTE_pets.lean  invariants_ROUTE_pets_id.lean
dashboard/: Dockerfile  README.md  context_debt_dashboard.py  dashboard_server.py  requirements.txt
docs/: API.md  CONTRIBUTING.md  SECURITY.md  onboarding.md  privacy.md  understanding-dashboard.md  usage.md
examples/: README.md
fixtures/: example_fixture.py  fixture_hot_path.py
instrumentation/: Dockerfile  README.md  metrics_dashboard.py  requirements.txt  understand_first_metrics.py
maps/: lens.json  lens_merged.json  out.json  repo.json
schemas/: README.md  SCHEMA_REFERENCE.md  config-schema.json  lens-schema.json  map-schema.json  metrics-schema.json  tour-schema.json  trace-schema.json  validate_schemas.py
scripts/: bootstrap_pipx.sh
templates/: README.md  pr_comment_template.md
tests/: conftest.py  test_analyzers_and_lens.py  test_ci_payloads.py  test_cli_smoke.py  test_config_and_openapi.py  test_contracts_and_boundaries.py  test_error_tracer.py  test_lang_strategies.py  test_report_and_visual.py
tours/: demo.md  example.md  tour.md
traces/: tour.json
web_demo/: accessibility-validator.js  assistive-technology-tester.js  context-debt-dashboard.html  design-system.css  index.html  lighthouse-integration.js  memory-manager.js  performance.js  ttu-ttfsc-optimizer.js  virtual-scroll.js
(+42 files in other folders)
