[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "understand-first"
version = "0.3.0"
description = "Understand-First: maps, lenses, tours that make reading code faster than writing it."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "UF Team", email = "team@understand-first.dev" }]
license = { text = "MIT" }
keywords = ["code-analysis", "documentation", "understanding", "maps", "tours"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "grpcio>=1.65.5",
    "grpcio-tools>=1.65.5",
    "pytest>=8.3.2",
    "hypothesis>=6.112.1",
    "jsonschema>=4.23.0",
    "openapi-schema-validator",
    "fastapi>=0.111.1",
    "uvicorn>=0.30.6",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "aiohttp>=3.9.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "django>=4.2.7",
    "djangorestframework>=3.14.0",
    "click>=8.1.7",
    "colorama>=0.4.6",
]

[project.scripts]
u = "cli.ucli.main:app"
understand-first = "cli.ucli.main:app"

[project.urls]
Homepage = "https://github.com/sentinelops-ci/understand-first"
Documentation = "https://github.com/sentinelops-ci/understand-first#readme"
Repository = "https://github.com/sentinelops-ci/understand-first"
Issues = "https://github.com/sentinelops-ci/understand-first/issues"

[tool.setuptools]
packages = ["cli"]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
